--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
-*, body {
-  margin: 0;
+body {
+  margin: auto 0;
+  font-size: 20px;
 }
 
-.header-container {
-  display: grid;
-  grid-template-columns: auto;
+/* --- MAIN NAV BEGIN --- */
+
+.main-nav-items {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
+
+.main-nav-items li {
+  padding: 20px 30px;
+}
+
+.main-nav-items a {
+  color: #f5f5f5;
+  text-decoration: none;
+  font-size: 100%;
+}
+
+.push-right {
+  margin-left: auto;
+}
+
+/* --- MAIN NAV END --- */
+
 
 .zone {
     cursor:pointer;
     color:#FFF;
-    font-size:2em;
+    font-size: 120%;
     transition: all 0.3s linear;
 }
 
