--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: auto 0;
   font-size: 20px;
   color: #f5f5f5;
+  font-family: Arial;
 }
 
 /* --- MAIN NAV BEGIN --- */
@@ -27,9 +28,15 @@ body {
   margin-left: auto;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
 /* --- MAIN NAV END --- */
 
-/* --- MAIN COVER BEGIN --- */
+/* --- COVER BEGIN --- */
 
 .cover-container {
   display: flex;
@@ -39,9 +46,9 @@ body {
   font-size: 200%;
 }
 
-/* --- MAIN COVER END --- */
+/* --- COVER END --- */
 
-/* --- MAIN GRID BEGIN --- */
+/* --- GRID BEGIN --- */
 .grid-container {
   display: grid;
   grid-gap: 30px;
@@ -54,11 +61,27 @@ body {
   margin: 20px;
 }
 
+.card:hover {
+  -webkit-transform: rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  -o-transform: rotate(-5deg);
+  transform: rotate(-5deg);
+}
+
 .card > img {
   width: 100%;
 }
-/* --- MAIN GRID END --- */
+/* --- FOOTER BEGIN --- */
 
+footer {
+  padding: 5px;
+  text-align: center;
+  font-size: 90%;
+}
+
+/* --- FOOTER END --- */
+
+/* --- ANIMATION BEGIN --- */
 
 .zone {
     cursor:pointer;
@@ -73,6 +96,10 @@ body {
     -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }
+
+/* --- ANIMATION END --- */
+
+/* --- COLOR SECTIONS BEGIN --- */
 
 /*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
 /***********************************************************************
@@ -126,3 +153,5 @@ body {
     background: -ms-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
     background: linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
 }
+
+/* --- COLOR SECTIONS END --- */
